Fix links overflowing

--- a/src/landing/Landing.css
+++ b/src/landing/Landing.css
@@ -2,3 +2,14 @@
 .landing {
   position: relative;
 }
+
+.linkWrapper {
+  white-space: nowrap;
+  display: inline-flex;
+  max-width: 100%;
+}
+
+.link {
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
